Add fastAPI to environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -5,4 +5,5 @@ dependencies:
   - conda-forge::requests
   - conda-forge::ujson
   - conda-forge::pytest
+  - conda-forge::fastapi
 prefix: /Users/philrater8/miniforge3/envs/CICD_pt2
