--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,12 +8,12 @@ jobs:
 
       - name: Build Docker images
         run: |
-          docker-compose build
+          docker compose build
 
       - name: Run tests
         run: |
-          docker-compose up --abort-on-container-exit
+          docker compose up --abort-on-container-exit
 
       - name: Cleanup
         run: |
-          docker-compose down
+          docker compose down
