--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -5,15 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Build Docker images
         run: |
           docker compose build
-
+      - name: Start services
+        run: |
+          docker compose up -d
+      - name: Wait for app to be ready
+        run: |
+          timeout 60 bash -c 'until curl -f http://localhost:8000 2>/dev/null; do sleep 2; done'
       - name: Run tests
         run: |
-          docker compose up --abort-on-container-exit
-
+          docker compose exec test pytest test_app.py -v
       - name: Cleanup
         run: |
           docker compose down
