Fix test command in workflow

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,7 +16,7 @@ jobs:
           timeout 60 bash -c 'until curl -f http://localhost:8000 2>/dev/null; do sleep 2; done'
       - name: Run tests
         run: |
-          docker compose run --rm test pytest test_app.py -v
+          docker compose run test
       - name: Cleanup
         run: |
           docker compose down
